Package/mdx 1 (#132)
MDX-1

Co-authored-by: Kajdic <dev@deniskajdic.com>
Co-authored-by: Dirty Harry <dirty-harry@ikmail.com>
Co-authored-by: Denis Kajdic <25393309+javac9@users.noreply.github.com>