@@ -128,7 +128,7 @@ public class CodeValue extends AttributeValue implements Serializable {
         this.containerName = containerName;
         this.defaultValue = fieldDef.defaultValue == null
             ? null
-            : new Short(fieldDef.defaultValue);
+            : Short.valueOf(fieldDef.defaultValue);
     }
 
     /**
@@ -263,7 +263,7 @@ public class CodeValue extends AttributeValue implements Serializable {
     		for(Iterator<?> i = ((Collection<?>)value).iterator(); i.hasNext(); ) {
     			Object code = i.next();
     			if(code instanceof Number) {
-    				Short codeAsShort = new Short(((Number)code).shortValue());
+    				Short codeAsShort = ((Number) code).shortValue();
     				String text = shortFormat
     					? (String)this.getShortText(true, true).get(codeAsShort)
     					: (String)this.getLongText(true, true).get(codeAsShort);
@@ -283,14 +283,14 @@ public class CodeValue extends AttributeValue implements Serializable {
     		return values;
     	} else {
     		if(value instanceof Number) {
-    			Short codeAsShort = new Short(((Number)value).shortValue());
+    			Short codeAsShort = ((Number) value).shortValue();
     			String text = shortFormat
     				? (String)this.getShortText(true, true).get(codeAsShort)
     				: (String)this.getLongText(true, true).get(codeAsShort);
 				return encode
 					? this.app.getHtmlEncoder().encode(text == null ? value.toString() : text, false)
 					: text == null ? value.toString() : text;
-    		} else {    			
+    		} else {
     			return encode
     				? this.app.getHtmlEncoder().encode(value.toString(), false)
     				: value.toString();
@@ -574,24 +574,24 @@ public class CodeValue extends AttributeValue implements Serializable {
     				values.add(v);
     			}
     			for(Iterator<?> i = values.iterator(); i.hasNext(); ) {
-    				Short codeValue = new Short(((Number)i.next()).shortValue());
+    				Short codeValue = ((Number) i.next()).shortValue();
     				String codeText = (String)this.getLongText(true, true).get(codeValue);
-    				String color = (String)this.app.getCodes().getColors(
+    				String color = this.app.getCodes().getColors(
     					this.containerName,
     					true
     				).get(codeValue);          
-    				String backColor = (String)this.app.getCodes().getBackColors(
+    				String backColor = this.app.getCodes().getBackColors(
     					this.containerName,
     					true
     				).get(codeValue);
-    				String iconKey = (String)this.app.getCodes().getIconKeys(
+    				String iconKey = this.app.getCodes().getIconKeys(
     					this.containerName,
     					true
     				).get(codeValue);
     				if((color != null) && (backColor != null)) {
-    					p.write("<div id=\"", id, (this.isSingleValued() ? "" : "-" + codeValue.toString()), "\" style=\"color:", color, ";background-color:", backColor, ";\">");
+    					p.write("<div id=\"", id, (this.isSingleValued() ? "" : "-" + codeValue), "\" style=\"color:", color, ";background-color:", backColor, ";\">");
     				} else {
-    					p.write("<div id=\"", id, (this.isSingleValued() ? "" : "-" + codeValue.toString()), "\">");
+    					p.write("<div id=\"", id, (this.isSingleValued() ? "" : "-" + codeValue), "\">");
     				}
     				if(iconKey != null) {
     					p.write("<img src=\"", p.getResourcePath("images/"), iconKey, "\" align=\"bottom\" border=\"0\" alt=\"\" />");
